--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -18,6 +18,7 @@ gem 'pg'
 gem 'strong_migrations'
 
 # === Model ===
+gem 'acts-as-taggable-on'
 gem 'ancestry'
 gem 'counter_culture'
 gem 'enumerize'
