➕ (chore): Add `acts_as_list` gem

--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -23,5 +23,5 @@ gem 'acts_as_follower'
 gem 'ancestry'
 gem 'counter_culture'
 gem 'enumerize'
-gem 'ranked-model'
+gem 'ranked-model' # or gem 'acts_as_list'
 gem 'stateful_enum'
