➕ (chore): Add `email_validator` gem

--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -29,3 +29,6 @@ gem 'counter_culture'
 gem 'enumerize'
 gem 'ranked-model' # or gem 'acts_as_list'
 gem 'stateful_enum'
+
+# === Validation ===
+gem 'email_validator'
