--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -22,6 +22,7 @@ gem 'activerecord-import'
 gem 'seed-fu'
 
 # === Model ===
+gem 'active_type'
 gem 'acts-as-taggable-on'
 gem 'acts_as_follower'
 gem 'ancestry'
