➕ (chore): Add `her` gem

--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -55,6 +55,9 @@ gem 'versionist'
 gem 'aws-sdk-sqs'
 gem 'shoryuken'
 
+# === External System ===
+gem 'her'
+
 # === Monitoring ===
 gem 'newrelic_rpm'
 gem 'okcomputer'
