➕ (chore): Add `bcrypt` gem

--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -55,6 +55,9 @@ gem 'versionist'
 gem 'aws-sdk-sqs'
 gem 'shoryuken'
 
+# === Authentication ===
+gem 'bcrypt'
+
 # === External System ===
 gem 'her'
 
