➕ (chore): Add `annotate` gem

--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -82,4 +82,7 @@ group :development do
   gem 'rubocop-rake'
   gem 'rails_best_practices'
   gem 'reek'
+
+  # === Documentation ===
+  gem 'annotate'
 end
