--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -90,5 +90,6 @@ group :development do
   # === Command ===
   gem 'listen'
   gem 'spring'
+  gem 'spring-commands-rspec'
   gem 'spring-watcher-listen'
 end
