--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -91,5 +91,6 @@ group :development do
   gem 'listen'
   gem 'spring'
   gem 'spring-commands-rspec'
+  gem 'spring-commands-rubocop'
   gem 'spring-watcher-listen'
 end
