--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -74,6 +74,7 @@ gem 'sentry-rails'
 group :test do
   # === Testing ===
   gem 'rspec-rails'
+  gem 'rspec-request_describer'
 end
 
 group :development do
