--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -76,6 +76,7 @@ group :test do
   gem 'rspec-rails'
   gem 'rspec-request_describer'
   gem 'committee-rails'
+  gem 'factory_bot_rails'
 end
 
 group :development do
