--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -77,6 +77,7 @@ group :test do
   gem 'rspec-request_describer'
   gem 'committee-rails'
   gem 'factory_bot_rails'
+  gem 'faker'
 end
 
 group :development do
