--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -89,6 +89,7 @@ group :development do
   gem 'rubocop-performance'
   gem 'rubocop-rails'
   gem 'rubocop-rspec'
+  gem 'rubocop-i18n'
   gem 'rubocop-inflector'
   gem 'rubocop-faker'
   gem 'rubocop-rake'
