--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -90,7 +90,7 @@ group :development do
   gem 'rubocop-rails'
   gem 'rubocop-rspec'
   gem 'rubocop-i18n'
-  gem 'rubocop-inflector'
+  # gem 'rubocop-inflector'
   gem 'rubocop-faker'
   gem 'rubocop-rake'
   gem 'rails_best_practices'
