➕ (chore): Add `simplecov` gem

--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -81,6 +81,9 @@ group :test do
   gem 'timecop'
   gem 'database_rewinder'
   gem 'fuubar'
+
+  # === Analysis ===
+  gem 'simplecov'
 end
 
 group :development do
