--- a/templates/Gemfile.tt
+++ b/templates/Gemfile.tt
@@ -2,7 +2,7 @@
 
 source 'https://rubygems.org'
 
-ruby File.read('.ruby-version').delete_prefix('ruby-').strip
+ruby File.read('.ruby-version').strip
 
 # === Application ===
 <% rails_gemfile_entry.each do |gem| -%>
